# the-commissioner

./: .gitignore  Caddyfile  docker-compose.yml
.env/: .dev
backend/: .gitignore  alembic.ini  pyproject.toml
backend/.env/: .dev
backend/app/: db.py  main.py  redis.py  settings.py
backend/app/api/: auth.py  inventory.py  ping.py  tasks.py
backend/app/core/: errors.py  utils.py
backend/app/core/host/: credentials.py  errors.py  host.py
backend/app/core/host/connections/: __init__.py  base.py  ssh.py
backend/app/core/inventory/: tasks.py  utils.py
backend/app/core/security/: utils.py
backend/app/core/security/auth/: base.py  tacacs.py
backend/app/core/tasks/: errors.py  network_tasks.py  tracker.py
backend/app/core/tasks/host/: __init__.py  base.py  ios_rt.py  ios_sw.py  nxos.py
backend/app/models/: auth.py  inventory.py  logs.py  tasks.py  token.py
backend/app/templates/: enable_interface.j2  shutdown_interface.j2
backend/docker/: Dockerfile  start.sh
backend/migrations/: env.py
backend/migrations/versions/: 252c7643f4f4_init.py  4ab1d4b850bd_init.py  b88d0e10a313_init.py
backend/tests/unit/core/host/: test_credentials.py  test_host.py
frontend/: README.md  package-lock.json  package.json  quasar.conf.js
frontend/docker/: Dockerfile  nginx.conf
frontend/src/: App.vue
frontend/src/boot/: axios.js  config.js
frontend/src/components/: DesktopTable.vue  DrawerLink.vue  InterfaceTable.vue  Login.vue  LogoutBtn.vue  NetworkTable.vue  SearchBar.vue
frontend/src/layouts/: LoginLayout.vue  MainLayout.vue
frontend/src/pages/: Dashboard.vue  Index.vue  Search.vue  SiteActivation.vue
frontend/src/router/: index.js  routes.js
frontend/src/store/: index.js
frontend/src/store/auth/: actions.js  mutations.js  state.js
frontend/src/store/inventory/: actions.js  mutations.js  state.js
frontend/src/store/tasks/: actions.js  mutations.js  state.js
