[tool.poetry]
name = "the-commissioner"
version = "0.1.0"
description = "The Network Commissioner!"
authors = ["Ryan Bradshaw <ryan@rbradshaw.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
httpx = "^0.20.0"
sqlmodel = "^0.0.4"
uvicorn = "^0.15.0"
alembic = "^1.7.4"
asyncpg = "^0.24.0"
jsondiff = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
black = "^21.10b0"
isort = "^5.9.3"
flake8 = "^4.0.1"
bpython = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
