[tool.poetry]
name = "the-commissioner"
version = "0.1.0"
description = "The Network Commissioner!"
authors = ["Ryan Bradshaw <ryan@rbradshaw.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
httpx = "^0.20.0"
sqlmodel = "^0.0.4"
alembic = "^1.7.4"
asyncpg = "^0.24.0"
jsondiff = "^1.3.0"
tacacs_plus = "^2.6"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
scrapli = {version = "^2021.7.30", extras = ["asyncssh", "netconf"]}
aioredis = {version = "^2.0.0", extras = ["hiredis"]}
hiredis = "^2.0.0"
psycopg2-binary = "^2.9.1"
pyats = {version = "21.9", extras = ["full"]}
uvicorn = {version = "^0.15.0", extras = ["standard"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
black = "^21.10b0"
isort = "^5.9.3"
flake8 = "^4.0.1"
bpython = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
